[gd_scene load_steps=4 format=2]

[ext_resource path="res://MiscRelated/GUIControlsRelated/PlayerGUI_ButtonStandard/PlayerGUI_ButtonStandard.gd" type="Script" id=1]
[ext_resource path="res://MiscRelated/FontRelated/Fonts/LcdSolid/LcdSolid-VPzB.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_color = Color( 0.133333, 0.133333, 0.133333, 1 )
font_data = ExtResource( 2 )

[node name="PlayerGUI_ButtonStandard" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LabelContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 2

[node name="Label" type="Label" parent="LabelContainer"]
margin_top = 2.0
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.8, 0.8, 0.8, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[connection signal="visibility_changed" from="." to="." method="_on_PlayerGUI_ButtonStandard_visibility_changed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
